# wipsie

./: .blackignore  .dockerignore  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .safety-policy.json  AURORA_ALEMBIC_DEPLOYMENT.md  AWS_CREDENTIALS_TROUBLESHOOTING.md  BROWSER_EXTENSION_MOVED.md  COMPLETE_DEPLOYMENT_PLAN.md  DEPLOYMENT_ACTION_PLAN.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_SUCCESS.md  EXTENSION_ARCHIVE_SUMMARY.md  GETTING_STARTED.md  GITHUB_ACTIONS_FIX.md  PR_SUMMARY.md  QUICK_DEPLOYMENT_GUIDE.md  README.md  __init__.py  alembic.ini  aws-iam-policy 2.json  catalog-info.yaml  celery_worker.py  compose.yaml  fastapi-response.json  iam list-attached-user-policies --user-name wipsie-infrastructure-user --output table  import json.py  in_flight_demo.py  initdb.sh  lambda-eventbridge-policy 2.json  lambda-payload.json  package-lock.json  package.json  process_messages.py  pyproject.toml  pytest.ini  requirements.txt  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh  requirements.txt
.github/: README.md
alembic/: env.py
archive/: EXTENSION_ARCHIVE_README.md  NEW_REPOSITORY_GUIDE.md  README.md  celery_worker_backup.py  start_server.py  test_celery.py  test_message.json
aws-lambda/: deploy-lambda.sh  pytest.ini  requirements.txt  test_lambda_local.py
backend/: README.md  __init__.py  factories.py  import json  main.py  main_fresh.py  main_simple.py  populate_database.py  requirements.txt  test_connection.py
browser-extension/: ARCHITECTURE.md  INSTALLATION.md  INSTALLATION_MANUAL.md  README.md  SUMMARY.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js  preview.html  test-page.html
cloudformation/: api-gateway.yml
dashboard/: index.html
docs/: ADMIN_IMPLEMENTATION_COMMANDS.md  ALL_FIXES_COMPLETE.md  ARCHITECTURE.md  AURORA_CLUSTERS_EXPLAINED.md  AURORA_DEPLOYMENT_IN_PROGRESS.md  AURORA_DEPLOYMENT_STATUS 2.md  AURORA_POSTGRESQL_SETUP.md  AURORA_QUERY_EDITOR_GUIDE.md  README.md  (+40 more)
(+216 files in other folders)
