[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wipsie"
version = "0.1.0"
description = "Learning and productivity application with FastAPI backend and Angular frontend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "celery==5.3.4",
    "flower==2.0.1",
    "boto3>=1.34.144",
    "botocore>=1.34.144",
    "email-validator==2.1.0",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart>=0.0.18",
    "pydantic==2.5.0",
    "pydantic-settings==2.0.3",
    "python-dotenv==1.0.0",
    "httpx==0.25.2",
    "requests>=2.32.2",
    "urllib3>=2.2.2",
    "structlog==23.2.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov",
]

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "backend/tests",
]
pythonpath = [
    "."
]
asyncio_mode = "auto"

[tool.black]
target-version = ['py311']
include = '\.pyi?$'
line-length = 88
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["backend"]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
